# qli-design

./: .gitignore  CMakeLists.txt  design.md
Component/: CMakeLists.txt
Component/observer/: Weather.h
Component/strategy/: ConcreteStrategy.h
Component/template/: Cook.cpp  main.cpp  template-design.md
ObjectCreator/: CMakeLists.txt
ObjectCreator/abstractFactory/: CMakeLists.txt  Factory.cpp  IFactory.h  IProduct.h  Product.cpp  main.cpp
ObjectCreator/builder/: CMakeLists.txt  main.cpp
ObjectCreator/factoryMethod/: CMakeLists.txt  Factory.cpp  IFactory.h  main.cpp
ObjectProperty/: CMakeLists.txt
ObjectProperty/flyweight/: CMakeLists.txt  main.cpp
ObjectProperty/singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
SRP/: CMakeLists.txt
SRP/bridge/: Brush.cpp  CMakeLists.txt  Color.cpp  IBrush.h  IColor.h  bridge-design.md  main.cpp
SRP/decorator/: CMakeLists.txt  Employe.cpp  Employe.h  IDecorator.h  Manager.cpp  Manager.h  decorator-design.md  main.cpp
action/observer/: CMakeLists.txt  Weather.h  main.cpp  obsrver-design.md
action/strategy/: ConcreteStrategy.cpp
action/template/: CMakeLists.txt  Cook.h
observer/: CMakeLists.txt  IObserver.h  Weather.cpp  main.cpp
strategy/: CMakeLists.txt  IStrategy.h  main.cpp  strategy-design.md
template/: main.cpp
